# slacg

./: .bazelrc  BUILD  LICENSE  MODULE.bazel  README.md  codegen_for_example.py  example.cpp  kkt_codegen.bzl  ldlt_codegen.py  pyproject.toml
.github/workflows/: pip.yml  wheels.yml
benchmarks/kernels/: BUILD.bazel  benchmark.cpp  codegen.py
slacg/: BUILD  BUILD.bazel  gtwg_codegen.py  kkt_codegen.py  ldlt_codegen.py  mat_vec_mult_codegen.py
slacg/internal/: BUILD  common.py
src/slacg/: BUILD  kkt_codegen.py  ldlt_codegen.py  mat_vec_mult_codegen.py
tests/: BUILD  codegen_for_example.py  example.cpp
tests/gtwg_test_1/: BUILD  BUILD.bazel  codegen.py  test.cpp
tests/kkt_test_1/: BUILD  BUILD.bazel  codegen.py  test.cpp
tests/kkt_test_no_inequalities/: BUILD.bazel  codegen.py  test.cpp
tests/ldlt_test_1/: BUILD  codegen.py  test.cpp
tests/ldlt_test_2/: BUILD  BUILD.bazel  codegen.py  test.cpp
tests/mat_vec_mult_test_1/: BUILD  BUILD.bazel  codegen.py  test.cpp
