module(name = "slacg", version = "0.0.13")

# Set up Python and pip.

bazel_dep(name = "rules_python", version = "1.9.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(python_version = "3.12", is_default = True)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
      hub_name = "pip",
      python_version = "3.12",
      requirements_lock = "//:requirements.lock",
)

use_repo(pip, "pip")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)

# Google Test
# https://github.com/google/googletest
bazel_dep(name = "googletest", version = "1.17.0")

# rules_cc
bazel_dep(name = "rules_cc", version = "0.2.17")

# Hermetic C++ Toolchain (Zig CC)
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain/...",
    "@zig_sdk//libc_aware/toolchain/...",
)
