load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@rules_python//python:defs.bzl", "py_binary")
load("//:kkt_codegen.bzl", "kkt_codegen_files", "kkt_codegen_sources")

py_binary(
  name = "codegen",
  srcs = ["codegen.py"],
  deps = [
    "//slacg:kkt_codegen",
  ]
)

genrule(
  name="codegen_genrule",
  outs = kkt_codegen_files("kkt_codegen", num_factor_chunks = 2),
  cmd = "$(location :codegen) $(RULEDIR) > /dev/null",
  tools = [":codegen"],
)

cc_library(
  name = "codegen_output",
  srcs = kkt_codegen_sources("kkt_codegen", num_factor_chunks = 2),
  hdrs = [
    "kkt_codegen.hpp",
  ],
)

cc_test(
  name = "test",
  size = "small",
  srcs = [
    "test.cpp",
  ],
  deps = [
    "@googletest//:gtest",
    "@googletest//:gtest_main",
    ":codegen_output"
  ],
  visibility = ["//visibility:public",],
)
